--- a/less/reset.less
+++ b/less/reset.less
@@ -1,20 +1,16 @@
 /**
  * Global Reset of all HTML Elements
- *
- * Resetting all of our HTML Elements ensures a smoother
- * visual transition between browsers. If you don't believe me,
- * try temporarily commenting out this block of code, then go
- * and look at Mozilla versus Safari, both good browsers with
- * a good implementation of CSS. The thing is, all browser CSS
- * defaults are different and at the end of the day if visual
- * consistency is what we're shooting for, then we need to
- * make sure we're resetting all spacing elements.
- *
  */
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 html, body {
 	border: 0;
-	font-family: "Helvetica-Neue", "Helvetica", Arial, sans-serif;
-	line-height: 1.5;
 	margin: 0;
 	padding: 0;
 }
@@ -31,7 +27,6 @@ h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, address, cit, code,
 del, dfn, em, ins, q, samp, small, strong, sub, sup, b, i, hr, dl, dt, dd,
 ol, ul, li, fieldset, legend, label {
   border: 0;
-  font-size: 100%;
   vertical-align: baseline;
   margin: 0;
   padding: 0;
