--- a/less/styles.less
+++ b/less/styles.less
@@ -1,24 +1,4 @@
-@import "layout";
-
-p{
-  .rounded(5px);
-  text-decoration: underline;
-  .bg-color();
-}
-
-.test{
-  .li-bullet(10px; 5px; 5px);
-  .font-color(#fff);
-}
-
-.product{
-
-}
-
-.product__item{
-
-}
-
-.product__item--hover {
-
-}
+@import "reset";
+@import "variables";
+@import "elements";
+@import "mixins";
