--- a/less/variables.less
+++ b/less/variables.less
@@ -1,12 +1,31 @@
 /* базовые установки цвета */
-@base-color: #000;
-@bg-color: red;
+@color: #000;
+
+@text-color: @color;
+@headings-color: @color;
+
+@link-color: #0088CC;
+@link-color--hover: darken(@link-color,15%);
+
+@border-color: @color;
+@border-color--hover: #3498DB;
 
 /* базовые установки шрифта */
-@base-fontFamily: Arial;
-@base-fontSize: 14px;
-@base-lineHeight: 16px;
+@html-size-base: 10px;
+@font-size: 1.4rem;
+@font-size--small: 1.1rem;
 
-/* установки для ссылок */
-@link-color: #fff;
-@link-color-hover: #eee;
+@line-height: 1.4;
+
+@headings-weight: 600;
+@headings-line-height: 1.2;
+
+@font-size--h1: 3rem;
+@font-size--h2: 2.4rem;
+@font-size--h3: 1.8rem;
+@font-size--h4: 1.4rem;
+@font-size--h5: @font-size;
+@font-size--h6: @font-size;
+
+@font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family--headings: @font-family;
